--- a/components/SubLayout.module.scss
+++ b/components/SubLayout.module.scss
@@ -6,10 +6,12 @@
 		font-size: 60px;
 		color: #555;
 		margin-bottom: 30px;
+		font-family: var('--orbitron');
 	}
 	p {
 		font-weight: 300;
 		font-size: 20px;
 		color: #777;
+		font-family: val('--notoSans');
 	}
 }
