--- a/components/SubLayout.module.scss
+++ b/components/SubLayout.module.scss
@@ -1,17 +1,17 @@
 .subLayout {
 	padding: 100px 10vw;
+	font-family: var('--orbitron');
 
 	h1 {
 		font-weight: 400;
 		font-size: 60px;
 		color: #555;
 		margin-bottom: 30px;
-		font-family: var('--orbitron');
 	}
 	p {
 		font-weight: 300;
 		font-size: 20px;
 		color: #777;
-		font-family: val('--notoSans');
+		font-family: var('--notoSans');
 	}
 }
