구글 웹폰트 적용

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -10,6 +10,7 @@
 	h1 {
 		a {
 			font-weight: 500;
+			//다음과 같은형식으로 font-family지정가능 var(--font-폰트객체명)
 			font-family: var(--font-orbitron);
 			color: #fff;
 
